# init-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  mcp_setup.yml  noisy_ranking.yml
.github/workflows/: ci.yml
docs/: agent-usage.md  commands.md  experiments.md  feedback.md  mcp.md  memory-workflows.md  parsing.md  roadmap.md  scoring.md  security.md
experiments/: README.md  cases.json  evaluate.py  plot_results.py
experiments/agent-runs/: README.md
experiments/django-hidden-cause/: README.md  results.json  results.md  task.md
experiments/django-hidden-cause/logs/: baseline_agent_log.md  init_agent_log.md
experiments/flow-graph/: README.md  evaluate.py
init_agent/: __init__.py  agent_tools.py  cli.py  cli_tool_commands.py  context_builder.py  contracts.py  doctor.py  estimate.py  exporter.py  feedback.py  git_reader.py  graph_store.py  language_detector.py  mcp_installer.py  mcp_server.py  mcp_tools.py  memory.py  overview.py  plan_feedback.py  query.py  reading_plan.py  refresh.py  renderers.py  run.py  scanner.py  session_tools.py  skill_installer.py  symbol_extractor.py  tasks.py  term_stats.py  text_tokens.py  trace.py  utils.py  web_ui.py
skills/: README.md
skills/init-agent-orientation/: SKILL.md
tests/: support.py  test_base.py  test_cli_tools.py  test_docs_install.py  test_experiments.py  test_feedback.py  test_ignore_refresh.py  test_index_context.py  test_mcp.py  test_symbol_extraction.py  test_web_ui.py
(+4 files in other folders)
