[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "init-agent"
version = "0.43.0"
description = "A local Project Orientation Layer for future AI CLI agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "init-agent contributors"}
]
keywords = ["cli", "sqlite", "code-index", "ai-agents", "repository-map"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
treesitter = [
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-php>=0.24,<0.25",
]

[project.scripts]
init-agent = "init_agent.cli:main"
init-agent-mcp = "init_agent.mcp_server:main"

[tool.setuptools.packages.find]
include = ["init_agent*"]

[tool.setuptools.package-data]
init_agent = ["resources/skills/init-agent-orientation/SKILL.md"]
